--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/postgres": "^0.10.0",
     "drizzle-orm": "^0.45.1",
     "next": "16.1.0",
+    "postgres": "^3.4.7",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-force-graph-2d": "^1.29.0",
